Update footer custom.html, authors.yml, navigation.yml, and _config.yml

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Sergio Rico"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "sergio.rico@miun.se"
+  bio         : "Assistant Professor at Mid Sweden University"
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
+  twitter     : "sergiohenryrico"
   google_plus : "Name"
 
 Name2 Name2:
